[package]
name = "redb"
description = "Rust Embedded DataBase"
readme = "README.md"
version = "3.1.0"
exclude = ["fuzz/"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[workspace]
members = [".", "crates/redb-bench", "crates/redb-derive", "crates/redb-python"]
default-members = [".", "crates/redb-derive", "crates/redb-python"]

[workspace.package]
edition = "2024"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
homepage = "https://www.redb.org"
repository = "https://github.com/cberner/redb"
authors = ["Christopher Berner <me@cberner.com>"]

[dependencies]
log = { version = "0.4.17", optional = true }
chrono_v0_4 = { package = "chrono", version= "0.4.41", optional = true }
uuid = { version= "1.17.0", optional = true }

[target.'cfg(target_os = "wasi")'.dependencies]
libc = "0.2.174"

# Common test/bench dependencies
[dev-dependencies]
rand = "0.9"
tempfile = "3.5.0"
# for backwards compatibility testing - pin at 2.6.0
redb2_6 = { version = "=2.6.0", package = "redb" }
bincode = "2.0.1"
uuid = { version= "1.17.0", features = ["v4"] }

[features]
# Enables log messages
logging = ["dep:log"]
# Enable cache hit metrics
cache_metrics = []

[profile.bench]
debug = true

[lints.clippy]
big_endian_bytes = "deny"
dbg_macro = "deny"
host_endian_bytes = "deny"
