[package]
name = "redb"
description = "Rust Embedded DataBase"
readme = "README.md"
version = "4.1.0"
exclude = ["fuzz/"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[workspace]
members = [".", "crates/redb-bench", "crates/redb-derive", "crates/redb-python"]
default-members = [".", "crates/redb-derive", "crates/redb-python"]

[workspace.package]
edition = "2024"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
homepage = "https://www.redb.org"
repository = "https://github.com/cberner/redb"
authors = ["Christopher Berner <me@cberner.com>"]

[dependencies]
log = { version = "0.4.17", optional = true }
chrono_v0_4 = { package = "chrono", version= "0.4.41", optional = true }
uuid = { version= "1.17.0", optional = true }

[target.'cfg(target_os = "wasi")'.dependencies]
libc = "0.2.174"

# Common test/bench dependencies
[dev-dependencies]
rand = "0.10.1"
tempfile = "3.5.0"
# for backwards compatibility testing - pin at 2.6.0
redb2_6 = { version = "=2.6.0", package = "redb" }
bincode = "2.0.1"
uuid = { version= "1.17.0", features = ["v4"] }
redb-derive = { path = "./crates/redb-derive" }

[features]
# Enables log messages
logging = ["dep:log"]
# Enable cache hit metrics
cache_metrics = []

[profile.release]
# Strip debuginfo from release artifacts (e.g. examples). Shaves ~250 KiB off a
# release binary without affecting runtime behavior. Downstream library users
# pick their own profile, so this only affects builds inside this workspace.
strip = "debuginfo"
# Whole-program LTO and a single codegen unit: smaller AND faster code, at the
# cost of a slower release compile. Examples/benchmarks/release builds done in
# this workspace are infrequent enough that the trade is worthwhile.
lto = true
codegen-units = 1

# Profile tuned for minimum binary size, e.g.:
#   cargo build --profile release-small --example int_keys
# Adds panic=abort and opt-level=z on top of release (saves ~250 KiB more on the
# examples). panic=abort is incompatible with `cargo test --release` because the
# test suite uses `catch_unwind`, so it lives in a separate profile.
[profile.release-small]
inherits = "release"
opt-level = "z"
panic = "abort"
strip = "symbols"

[profile.bench]
debug = true
# Restore debuginfo (needed for profiling) that [profile.release]'s strip would
# otherwise remove since bench inherits from release.
strip = "none"

[lints.clippy]
big_endian_bytes = "deny"
dbg_macro = "deny"
host_endian_bytes = "deny"
