[project]
name = "redb"
requires-python = ">=3.7"
dynamic = ["version"]
classifier = ["Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust"]

[build-system]
requires = ["maturin>=0.13.0,<0.14"]
build-backend = "maturin"

[tool.maturin]
compatibility = "manylinux2014"
features = ["python"]
