[package]
name = "redb-bench"
version = "0.0.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

# Common test/bench dependencies
[dev-dependencies]
redb = { path = "../.." }
rand = "0.9"
tempfile = "3.5.0"
walkdir = "2.5.0"
byte-unit = "5.1.6"
fastrand = "2.0.0"
sled = "0.34.7"
libc = "0.2.99"
ctrlc = "3.2.3"
heed = "0.20"
sanakirja = "=1.4.1"
sanakirja-core = "=1.4.1"
rocksdb = { version = "0.22.0", default-features = false, features = ["lz4"] }
fjall = "=2.10"
comfy-table = "7.0.1"
env_logger = "0.11"

[target.'cfg(target_os = "linux")'.dev-dependencies]
io-uring = "0.7.4"

[[bench]]
name = "atomics_benchmark"
harness = false

[[bench]]
name = "multithreaded_insert_benchmark"
harness = false

[[bench]]
name = "userspace_cache_benchmark"
harness = false

[[bench]]
name = "savepoint_benchmark"
harness = false

[[bench]]
name = "lmdb_benchmark"
harness = false

[[bench]]
name = "redb_benchmark"
harness = false

[[bench]]
name = "large_values_benchmark"
harness = false

[[bench]]
name = "int_benchmark"
harness = false

[[bench]]
name = "syscall_benchmark"
harness = false
