[package]
name = "redbx-bench"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
redbx = { path = "../.." }
redb = "3.0.1"  # Original redb for comparison
tempfile = "3.5.0"
fastrand = "2.0.0"
comfy-table = "7.0.1"
env_logger = "0.11"

[[bench]]
name = "encryption_overhead"
harness = false